--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CrisisChai - Blockchain Aid Distribution</title>
+    <title>AfricaChainAid - Blockchain Aid Distribution</title>
     <meta name="description" content="Blockchain-powered aid distribution platform for Africa" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="CrisisChai - Blockchain Aid Distribution" />
+    <meta property="og:title" content="AfricaChainAid - Blockchain Aid Distribution" />
     <meta property="og:description" content="Blockchain-powered aid distribution platform for Africa" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
